build_error.log.txt
    Checking ai-gateway v0.1.0 (/home/marchcat/projects/ai-gateway)
warning: unused import: `url::Url`
 --> src/llms_txt/sitemap.rs:4:5
  |
4 | use url::Url;
  |     ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `uuid::Uuid`
 --> src/llms_txt/mod.rs:7:5
  |
7 | use uuid::Uuid;
  |     ^^^^^^^^^^

error[E0599]: no method named `exists_by_url` found for reference `&S` in the current scope
  --> src/llms_txt/sitemap.rs:66:24
   |
66 |             if storage.exists_by_url(&url_entry.loc).await.unwrap_or(false) {
   |                        ^^^^^^^^^^^^^
   |
help: there is a method `get_by_url` with a similar name
   |
66 -             if storage.exists_by_url(&url_entry.loc).await.unwrap_or(false) {
66 +             if storage.get_by_url(&url_entry.loc).await.unwrap_or(false) {
   |

warning: unused variable: `idx`
  --> src/llms_txt/generator.rs:98:14
   |
98 |         for (idx, chunk) in chunks.iter().enumerate() {
   |              ^^^ help: if this is intentional, prefix it with an underscore: `_idx`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error[E0733]: recursion in an async fn requires boxing
   --> src/llms_txt/sitemap.rs:91:5
    |
 91 |     pub async fn load(&self, sitemap_url: &str) -> Result<Vec<SitemapUrl>, SitemapError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
109 |                 match self.load(&sitemap_ref.loc).await {
    |                       --------------------------------- recursive call here
    |
    = note: a recursive `async fn` call must introduce indirection such as `Box::pin` to avoid an infinitely sized future

Some errors have detailed explanations: E0599, E0733.
For more information about an error, try `rustc --explain E0599`.
warning: `ai-gateway` (lib) generated 3 warnings
error: could not compile `ai-gateway` (lib) due to 2 previous errors; 3 warnings emitted
